Added Cache Expiration

--- a/tests/DataAccess.Tests/.env
+++ b/tests/DataAccess.Tests/.env
@@ -2,3 +2,4 @@ DATAACCESS__SERVER='localhost,1433'
 DATAACCESS__DATABASE='TestDatabase'
 DATAACCESS__USERID='sa'
 DATAACCESS__PASSWORD='saroot1234$'
+DATAACCESS__CACHETIMEOUT='2.00:00:00'
