--- a/tests/DataAccess.Tests/DataAccess.Tests.csproj
+++ b/tests/DataAccess.Tests/DataAccess.Tests.csproj
@@ -26,6 +26,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\src\DataAccess.Migrations\DataAccess.Migrations.csproj" />
       <ProjectReference Include="..\..\src\DataAccess\DataAccess.csproj" />
     </ItemGroup>
 
