--- a/src/DataAccess/DataAccess.csproj
+++ b/src/DataAccess/DataAccess.csproj
@@ -8,11 +8,15 @@
 
     <ItemGroup>
         <PackageReference Include="Dapper" Version="2.1.35"/>
+        <PackageReference Include="FluentMigrator" Version="5.2.0" />
+        <PackageReference Include="FluentMigrator.Abstractions" Version="5.2.0" />
+        <PackageReference Include="FluentMigrator.Runner" Version="5.2.0" />
         <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0"/>
         <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0"/>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2"/>
         <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0"/>
     </ItemGroup>
